--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./script.js"></script>
   </head>
 
   <body>
@@ -21,7 +22,7 @@
     <h2>Exercise 1 </h2>
     <p>write a function to manipulate dom and change the background color of your browser to your favorite color</p>
 
-    <p><button onclick="changeBackgroundColor()">Click Me</button></p>
+    <p><button onclick="set_background()">Click Me</button></p>
     <div id="container">
       <p>my color</p> 
     </div>
@@ -40,6 +41,6 @@
 
     <button id="myBtn">Display Date & Time</button>
 
-    <script src="./script.js"></script>
+    
   </body>
 </html>
